--- a/live/templates/index.html
+++ b/live/templates/index.html
@@ -23,16 +23,12 @@
       height: 100%;
     "
   >
-    <div style="flex: 1; display: flex">
+    <div style="flex: 1; display: flex; height: 100%">
       <div style="flex: 1">
-        <textarea id="code-editor" style="width: 100%; height: 100%"></textarea>
+        <textarea id="code-editor"></textarea>
       </div>
       <div style="flex: 1">
-        <textarea
-          id="right-textbox"
-          style="width: 100%; height: 100%"
-          readonly
-        ></textarea>
+        <textarea id="right-textbox" readonly></textarea>
       </div>
     </div>
 
@@ -41,11 +37,13 @@
         document.getElementById("code-editor"),
         {
           mode: {
-            name: "python"
+            name: "python",
           },
           lineNumbers: true,
+          lineWrapping: true,
         }
       );
+      codeEditor.setSize(null, window.screen.height);
 
       console.log("Modes" + CodeMirror.modes);
       const verilogDisplay = CodeMirror.fromTextArea(
@@ -55,8 +53,10 @@
             name: "verilog",
           },
           lineNumbers: true,
+          lineWrapping: true,
         }
       );
+      verilogDisplay.setSize(null, window.screen.height);
 
       codeEditor.on("change", function (instance) {
         var code = instance.getValue();
