--- a/live/templates/index.html
+++ b/live/templates/index.html
@@ -14,16 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/python/python.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
-  <body
-    style="
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-    "
-  >
-    <div style="flex: 1; display: flex; height: 100%">
+  <body>
+    <div style="display: flex;">
       <div style="flex: 1">
         <textarea id="code-editor"></textarea>
       </div>
